	Here's an example for a pretty funky displacement:

		RandomPlacement "on" "-30-100"

	[Richard Levitte]

   14 - Extend the Info window with the geometry seen from the lower
	right corner as well.
	[Richard Levitte]

   15 - Extend the pointer button specification for title buttons
	to take modifiers.
	As part of this change, the following title pointer button
	specification is deprecated:

		Button {j} : {function}

	in favor of the following, for consistency:

		Button {j} = {function}

	The old way still works, but is considered bad form and will
	be removed in ctwm 4.0.
	[Richard Levitte]

   16 - Fix position of buttons in Occupy window, to make them centered.
	(and spread the remaining space evenly in 4).
	[Olaf "Rhialto" Seibert]

   17 - "TwmWindow.group" was once apparently set to 0 when a window had
	no group leader but this was changed to pointing to its own
	window.  This resulted however in many places checking for both
	conditions, and several checking only for 0 which could not
	occur anymore. Changed it back to 0 (so we can now distinguish
	again windows that really indicate themselves as group leader,
	if we wish) and this gave rise to some simplifications.

	Also, there were various loops through all TwmWindows looking
	for a group leader (or a transientfor), I replaced them with
	GetTwmWindow() which uses the Xlib function XFindContext() which
	uses a hash table lookup. This should be more efficient.

	When you change the occupation of a group member window, it is
	now applied to the group leader (which in turn affects all
	members).

	I tried this with ExMH, the only program that uses a real group
	leader that I could find. Iconifying the leader unmaps the
	members. What should "squeezing" do? ExMH also has an icon
	window (see ICCCM 4.1.9, 3rd option) which behaves weirdly; this
	may be a bug in ExMH (see exmh-2.7.2/exmh.BUGS) even though fvwm
	somehow handles it better.
	[Olaf "Rhialto" Seibert]